# JNeRF

./: .gitignore  LICENSE.txt  README.md  log  mesh-color.py  mesh.ipynb  mesh.py  requirement.txt  requirements.txt  run.sh  setup.py
.devcontainer/: Dockerfile  README.md  devcontainer.json  docker-compose.yml
contrib/HSDF-Net/: LICENSE  NDF_combine.py  README.md  environment.yml  generate.py  ndf_postprocess.mlx  renderer.py  train.py  utils.py
contrib/HSDF-Net/ChamferDistancePytorch/: .gitignore  README.md
contrib/HSDF-Net/configs/: config_loader.py  example1.txt  example2.txt
contrib/HSDF-Net/dataprocessing/: boundary_sampling.py  convert_to_scaled_off.py  create_split.py  preprocess.py  voxelized_pointcloud_sampling.py
contrib/HSDF-Net/models/: generation.py  local_model.py  training.py
contrib/HSDF-Net/slurm_scripts/: run_preprocessing.sh
contrib/HSDF-Net/trainers/: base_trainer.py  implicit_deform.py  implicit_deform_2D.py  implicit_deform_3D.py  nf_sdf_trainer_3D.py  smooth_sharpen.py  smooth_sharpen_3D.py
contrib/HSDF-Net/trainers/losses/: eikonal_loss.py  filtering_losses.py  implicit_thin_shell_losses.py
contrib/HSDF-Net/trainers/utils/: diff_ops.py  igp_utils.py  o3d_deformation.py  utils.py  vis_utils.py
contrib/NeRF-Editing/: README.md
contrib/NeRF-Editing/OpenVolumeMesh/: CMakeLists.txt
contrib/NeRF-Editing/OpenVolumeMesh/simple_mesh/: simple_mesh.cc  test.cpp
contrib/NeRF-Editing/TetWild/: CMakeLists.txt  Dockerfile  README.md
contrib/NeRF-Editing/TetWild/cmake/: FindLIBIGL.cmake  TetWildDependencies.cmake  TetWildDownloadExternal.cmake  UseColors.cmake  Warnings.cmake  geogram.cmake
contrib/NeRF-Editing/TetWild/include/tetwild/: Args.h  Exception.h  Logger.h  tetwild.h
contrib/NeRF-Editing/TetWild/src/: main.cpp
contrib/NeRF-Editing/TetWild/src/ispc/: CMakeLists.txt  energy.ispc
contrib/NeRF-Editing/TetWild/src/tetwild/: BSPElements.h  BSPSubdivision.cpp  BSPSubdivision.h  CGALTypes.h  Common.cpp  Common.h  DelaunayTetrahedralization.cpp  DelaunayTetrahedralization.h  DisableWarnings.h  DistanceQuery.h  EdgeCollapser.cpp  EdgeCollapser.h  EdgeRemover.cpp  EdgeRemover.h  EdgeSplitter.cpp  EdgeSplitter.h  EnableWarnings.h  ForwardDecls.h  InoutFiltering.cpp  InoutFiltering.h  LocalOperations.cpp  LocalOperations.h  Logger.cpp  MeshConformer.cpp  MeshConformer.h  MeshRefinement.cpp  MeshRefinement.h  Preprocess.cpp  Preprocess.h  Serialization.h  SimpleTetrahedralization.cpp  SimpleTetrahedralization.h  State.cpp  State.h  TetmeshElements.cpp  TetmeshElements.h  VertexSmoother.cpp  VertexSmoother.h  tetwild.cpp
contrib/NeRF-Editing/TetWild/src/tetwild/geogram/: mesh_AABB.cpp  mesh_AABB.h
contrib/NeRF-Editing/data_process/: process_colmap.py
contrib/NeRF-Editing/src/: barycentric_control_pts_jittor.py  exp_runner.py  utils.py
contrib/NeRF-Editing/src/confs/: wmask_lego.conf  wmask_lego_render.conf  wmask_mic.conf  wmask_mic_render.conf  womask_hbychair.conf  womask_hbychair_render.conf
contrib/NeRF-Editing/src/models/: dataset.py  embedder.py  fields.py  render_train.py  renderer.py
contrib/NeRF-Editing/volumeARAP_batch/: CMakeLists.txt
contrib/NeRF-Editing/volumeARAP_batch/src/: ARAPDeform.h  MyUtils.cpp  MyUtils.h  main.cpp  yyjARAPDeform.cpp
contrib/Recursive-NeRF/: README.md  image_mem.py  image_mem_helpers.py  load_blender.py  requirements.txt  run_nerf.py  run_nerf_helpers.py
contrib/Recursive-NeRF/configs/: bike.txt  bike_full.txt  bike_tot.txt  chair.txt  chess.txt  chess_full.txt  chess_simple.txt  cornell.txt  drums.txt  fern.txt  ficus.txt  hotdog.txt  lego.txt  materials.txt  mic.txt  scannet.txt  ship.txt
contrib/StylizedNeRF/: README.md  Style_function.py  VGGNet.py  config.py  dataset.py  load_llff.py  models_jt.py  rendering.py  requirements.txt  run_stylenerf.py  train_style_modules.py  utils.py
contrib/StylizedNeRF/configs/: fern.txt  flower.txt
contrib/mipnerf/: README.md
contrib/mipnerf/projects/mipnerf/configs/: mip_base.py  multicam.py
contrib/mipnerf/python/jnerf/: __init__.py
contrib/mipnerf/python/jnerf/dataset/: __init__.py  dataset.py  dataset_util.py  nerf.py  nerf_datasets.py
contrib/mipnerf/python/jnerf/optims/: linearlog.py
contrib/mipnerf/python/jnerf/runner/: __init__.py  runner.py
contrib/mipnerf/python/jnerf/utils/: common.py  logs.py  miputils.py  registry.py
contrib/mipnerf/tools/: run_net.py
contrib/neus/: NeuS_ReadMe.md
contrib/pixelnerf/: Dataset.py  ImageEncoder.py  Network.py  Render.py  main.py  readme.md  test_utils.py
contrib/plenoxel/: README.md
contrib/plenoxel/projects/svox2/configs/: svox2_base.py
data/fox/: transforms_test.json  transforms_train.json
licenses/: ngp-license.txt  tncc-license.txt
log/thin_cube/womask/meshes/: 00005000.ply  00010000.ply  00015000.ply
projects/mipnerf/configs/: mip_base.py
projects/nerf/: README.md
projects/nerf/configs/: nerf_base.py
projects/neus/: README.md  neus_womask.py  womask.conf
projects/neus/configs/: neus_wmask.py
projects/ngp/: README.md
projects/ngp/configs/: ngp_base.py  ngp_comp.py  ngp_fewshot.py  ngp_fox.py  ngp_llff.py
projects/pixelnerf/config/: pixel_base.py
python/: setup.py
python/jnerf/: __init__.py
python/jnerf/dataset/: __init__.py  camera_path.py  dataset.py  dataset_util.py  llff_dataset.py  neus_dataset.py  reference_dataset.py  svox_dataset.py
python/jnerf/models/losses/: huber_loss.py
python/jnerf/models/networks/: __init__.py  mip_network.py  neus_network.py  ngp_network.py  ori_nerf_network.py  pixel_network.py  svox2_network.py
python/jnerf/models/position_encoders/: __init__.py
python/jnerf/models/samplers/: __init__.py
python/jnerf/ops/code_ops/: __init__.py  fully_fused_mlp.py  fully_fused_mlp_function.cc  fully_fused_mlp_header.h  global_vars.py
python/jnerf/optims/: __init__.py  adam.py  ema.py  expdecay.py  linearlog.py
python/jnerf/runner/: __init__.py  neus_runner.py  runner.py  runner_svox2.py
python/jnerf/utils/: common.py  config.py  general.py  miputils.py  registry.py
tools/: extract_mesh.py  run_net.py  run_neus.py
(+286 files in other folders)
